org.eclipse.jdt.ui.tests.refactoring/resources/InlineMethodWorkspace/TestCases/invalid/TestFieldInitializer.java
package invalid;

public class TestFieldInitializer {
	
	private int field= /*]*/foo()/*[*/;	
	
	public int foo() {
		return 1;
	}
}
